--- a/config/cluster.yaml
+++ b/config/cluster.yaml
@@ -2,7 +2,7 @@ grid_search:
   module: sklearn.model_selection
   class: GridSearchCV
   params:
-    cv: 5
+    cv: 2
     verbose: 3
     n_jobs : -1
     scoring: roc_auc
@@ -25,38 +25,6 @@ model_selection:
         - 6
         - 7
         - 8
-        - 9
-        - 10
-        - 11
-      min_samples_split:
-        - 2
-        - 3
-        - 4
-        - 5
-        - 6
-        - 7
-        - 8
-        - 9
-        - 10
-        - 11
-      min_samples_leaf:
-        - 2
-        - 3
-        - 4
-        - 5
-        - 6
-      min_weifght_fraction_leaf:
-        - 0.0
-        - 0.1
-        - 0.2
-        - 0.3
-        - 0.4
-        - 0.5
-        - 0.6
-        - 0.7
-        - 0.8
-        - 0.9
-        - 1.0
       max_features :
         - auto
         - log2
@@ -64,14 +32,12 @@ model_selection:
         - None
       random_state :
         - 1965
-        - 43
   model_2:
     module: xgboost
     class: XGBClassifier
     search_param_grid:
       n_estimators :
         - 500
-        - 600
         - 700
       max_depth:
         - 3
@@ -85,27 +51,16 @@ model_selection:
         - 0.3
       eval_metric:
         - auc
-        - error
-        - logloss
-      objective :
-        - binary:logistic
-        - multi:softmax
-        - multi:softprob
-        - binary:logistic
-        - multi:softprob
       booster :
         - gbtree
         - gblinear
-        - dart
       gamma :
         - 0.0
         - 0.1
-        - 0.2
         - 0.3
         - 0.4
       random_state :
         - 1965
-        - 43
   model_3:
     module: sklearn.linear_model
     class: LogisticRegression
@@ -155,14 +110,8 @@ model_selection:
         - euclidean
         - chebyshev
         - minkowski
-      metric_params :
-        - p=3
-        - p=4
-        - p=5
+ 
       
-      random_state :
-        - 1965
-        - 43
   model_5:
     module: sklearn.svm
     class: SVC
@@ -172,60 +121,37 @@ model_selection:
         - 0.2
         - 0.3
         - 0.4
-        - 0.5
-        - 0.6
-        - 0.7
-        - 0.8
-        - 0.9
-        - 1.0
+  
       kernel :
         - linear
         - poly
         - rbf
         - sigmoid
-        - precomputed
-      degree :
-        - 1
-        - 2
-        - 3
-        - 4
-        - 5
-        - 6
-        - 7
-        - 8
-        - 9
-        - 10
       gamma :
         - 0.0
         - 0.1
         - 0.2
-        - 0.3
-        - 0.4
-        - 0.5
-        - 0.6
-        - 0.7
-        - 0.8
-        - 0.9
         - 1.0
       coef0 :
         - 0.0
         - 0.1
         - 0.2
         - 0.3
-        - 0.4
-        - 0.5
-        - 0.6
-        - 0.7
-        - 0.8
-        - 0.9
-        - 1.0
-      shrinking :
-        - True
-        - False
-      probability :
-        - True
-        - False
       random_state :
         - 1965
-        - 43
+  model_6:
+    module: sklearn.naive_bayes
+    class: GaussianNB
+    search_param_grid:
+      var_smoothing :
+        - 1e-09
+        - 1e-08
+        - 1e-07
+        - 1e-06
+        - 1e-05
+        - 1e-04
+        - 1e-03
+        - 1e-02
+        - 1e-01
+        - 1.0
  
